Terms and conditions added and submit button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,17 @@
                 
             />
         </label>
+        <hr>
+        <label>
+            Please acept terms and conditions before submitting your info.
+            <input
+                type="checkbox"
+                name="terms"
+                checked
+            />
+        </label>
         <br>
+        <button type="submit">submit</button>
     </form>
 </body>
 </html>
