README.md is already added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </label>
         <hr>
         <label>
-            Please acept terms and conditions before submitting your info.
+            Please accept terms and conditions before submitting your info.
             <input
                 type="checkbox"
                 name="terms"
